--- a/examples/16-boost/01-adaboost-dstump.ipynb
+++ b/examples/16-boost/01-adaboost-dstump.ipynb
@@ -264,7 +264,7 @@
     "        err = self._search_split(X,target) \n",
     "        return err, self._model\n",
     "    \n",
-    "    # поиск оптимальной гиперплоскости \n",
+    "    # поиск оптимальной гиперплоскости ограниченным перебором\n",
     "    def _search_split( self, X, target): # n_thresholds - количество порогов для перебора\n",
     "        thresholds = self._get_thresholds(X)\n",
     "        \n",
@@ -315,8 +315,8 @@
     "    def _criterium(self,x,target,n_feature,threshold):\n",
     "        self._model.threshold = threshold\n",
     "        self._model.n_feature = n_feature\n",
-    "        # взвешенная суммарная ошибка    \n",
-    "        return self._errors(x,target).sum()\n",
+    "        # суммарная ошибка для признака n_feature и порога threshold\n",
+    "        return self._errors(x,target).sum() \n",
     "\n",
     "    # ошибки классификатора\n",
     "    def _errors(self,x,target):\n",
@@ -477,7 +477,7 @@
    "outputs": [],
    "source": [
     "# WeigtedVotingEnsembleClassifier(\n",
-    "#         models=[DecisionStumbClassifier(),DecisionStumbClassifier()],\n",
+    "#         models=[ DecisionStumpClassifier(),DecisionStumpClassifier() ],\n",
     "#         weight=[.7,.3],\n",
     "#     ).predict(X_train)"
    ]
@@ -534,7 +534,6 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "#accuracy_score(y_true, y_pred,)\n",
     "from copy import deepcopy"
    ]
   },
