--- a/lab/01-metric/02-metric-cluster.ipynb
+++ b/lab/01-metric/02-metric-cluster.ipynb
@@ -29,19 +29,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## данные"
+    "#  загружаем данные\n",
+    "\n",
+    "Scikit-Learn : Dataset loading utilities     \n",
+    "https://scikit-learn.org/stable/datasets.html\n",
+    "\n",
+    "UC Irvine Machine Learning Repository    \n",
+    "https://archive.ics.uci.edu"
    ]
   },
   {
@@ -50,8 +47,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import datasets\n",
-    "help(datasets)"
+    "import numpy as np\n",
+    "from sklearn import datasets "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(datasets)"
    ]
   },
   {
@@ -62,11 +68,30 @@
    "source": [
     "# выбираем один из вариантов\n",
     "from sklearn.datasets import make_blobs # модельные данные \n",
-    "\n",
-    "# https://archive.ics.uci.edu\n",
-    "# https://www.openml.org/search?type=data\n",
-    "# from sklearn.datasets import fetch_openml\n",
-    "# help(fetch_openml)"
+    "# from sklearn.datasets import fetch_openml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# изучение и визуализация данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Decomposition.   \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib: Quick start guide.    \n",
+    "https://matplotlib.org/stable/users/explain/quick_start.html"
    ]
   },
   {
@@ -75,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# изучение/визуализация данных\n",
+    "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -84,6 +109,14 @@
    "metadata": {},
    "source": [
     "## загружаем и применяем модель кластеризатора"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Clustering.    \n",
+    "https://scikit-learn.org/stable/modules/clustering.html"
    ]
   },
   {
@@ -106,13 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import silhouette_score # считаем метрику качества\n",
-    "\n",
-    "# визуализируем данные (для 2D)"
+    "from sklearn.metrics import silhouette_score # считаем метрику качества"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# визуализируем результаты"
    ]
   },
   {
@@ -139,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
