--- a/lab/02-statistics/01-statistics-class.ipynb
+++ b/lab/02-statistics/01-statistics-class.ipynb
@@ -29,8 +29,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  загружаем данные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Dataset loading utilities    \n",
+    "https://scikit-learn.org/stable/datasets.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UC Irvine Machine Learning Repository    \n",
+    "https://archive.ics.uci.edu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +61,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## данные"
+    "from sklearn import datasets "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "выбираем и загружаем датасет"
+    "# изучение и визуализация данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Decomposition.   \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib: Quick start guide.    \n",
+    "https://matplotlib.org/stable/users/explain/quick_start.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# выделить тестовые данные"
    ]
   },
   {
@@ -57,25 +115,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn import datasets\n",
-    "# help(datasets)"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# выбираем один из вариантов\n",
-    "\n",
-    "# from sklearn.datasets import load_iris\n",
-    "from sklearn.datasets import load_wine\n",
-    "\n",
-    "# https://archive.ics.uci.edu\n",
-    "# https://www.openml.org/search?type=data\n",
-    "# from sklearn.datasets import fetch_openml\n",
-    "# help(fetch_openml)"
+    "# обработка данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Preprocessing data.    \n",
+    "https://scikit-learn.org/stable/modules/preprocessing.html"
    ]
   },
   {
@@ -91,28 +146,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## выделить тестовые данные"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
+    "# загружаем и обучаем модель классификатора"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## загружаем и обучаем модель классификатора"
+    "Scikit-Learn : Naive Bayes.    \n",
+    "https://scikit-learn.org/stable/modules/naive_bayes.html    \n",
+    "https://scikit-learn.org/stable/modules/classes.html#module-sklearn.naive_bayes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +168,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Model selection: choosing estimators and their parameters.    \n",
+    "https://scikit-learn.org/stable/tutorial/statistical_inference/model_selection.html    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# применяем методы поиска оптимальных гиперпараметров модели\n",
     "from sklearn.model_selection import GridSearchCV"
    ]
   },
@@ -132,14 +189,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## оценка результатов классификации"
+    "# оценка результатов классификации"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter"
+    "Scikit-Learn : Metrics and scoring: quantifying the quality of predictions   \n",
+    "https://scikit-learn.org/stable/modules/model_evaluation.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report # метрики качества"
    ]
   },
   {
@@ -149,10 +216,15 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix # количество ошибок\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "\n",
-    "from sklearn.metrics import classification_report # метрики качества\n",
-    "\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.metrics import roc_curve\n",
     "from sklearn.metrics import auc\n",
     "from sklearn.metrics import RocCurveDisplay"
@@ -175,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
