--- a/lab/03-logical/01-logical-class.ipynb
+++ b/lab/03-logical/01-logical-class.ipynb
@@ -73,6 +73,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# изучение и визуализация данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Decomposition.   \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib: Quick start guide.    \n",
+    "https://matplotlib.org/stable/users/explain/quick_start.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# выделить тестовые данные"
    ]
   },
@@ -93,12 +126,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn: Decision Trees.    \n",
+    "https://scikit-learn.org/stable/modules/tree.html   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Model selection: choosing estimators and their parameters.   \n",
+    "https://scikit-learn.org/stable/tutorial/statistical_inference/model_selection.html"
    ]
   },
   {
