--- a/lab/03-logical/02-logic-regr.ipynb
+++ b/lab/03-logical/02-logic-regr.ipynb
@@ -88,6 +88,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# вариант 2: генерируем набор данных\n",
+    "\n",
+    "def f(x): return np.sin(x*2.9)+np.cos(x*5.9)\n",
+    "\n",
+    "def generate(n_samples=256, noise=.2):\n",
+    "    x = (rng.rand(n_samples)-.5)*np.pi\n",
+    "    x = np.sort(x)\n",
+    "    return x.reshape(-1,1), (f(x)+rng.normal(0., noise, n_samples)).reshape(-1,1)\n",
+    "\n",
+    "X_train, y_train = generate()\n",
+    "X_test, y_test = generate(n_samples=128)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# изучение и визуализация данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Decomposition.   \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib: Quick start guide.    \n",
+    "https://matplotlib.org/stable/users/explain/quick_start.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -113,18 +165,6 @@
     }
    ],
    "source": [
-    "# вариант 2: генерируем набор данных\n",
-    "\n",
-    "def f(x): return np.sin(x*2.9)+np.cos(x*5.9)\n",
-    "\n",
-    "def generate(n_samples=256, noise=.2):\n",
-    "    x = (rng.rand(n_samples)-.5)*np.pi\n",
-    "    x = np.sort(x)\n",
-    "    return x.reshape(-1,1), (f(x)+rng.normal(0., noise, n_samples)).reshape(-1,1)\n",
-    "\n",
-    "X_train, y_train = generate()\n",
-    "X_test, y_test = generate(n_samples=128)\n",
-    "\n",
     "# рисуем результат\n",
     "fig,ax = plt.subplots(figsize=(9,4))\n",
     "ax.scatter(x=X_train,y=y_train,alpha=.3,marker='.',label='train data') # точки учебного набора\n",
@@ -142,12 +182,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn: Decision Trees.   \n",
+    "https://scikit-learn.org/stable/modules/tree.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Model selection: choosing estimators and their parameters.    \n",
+    "https://scikit-learn.org/stable/tutorial/statistical_inference/model_selection.html"
    ]
   },
   {
@@ -190,6 +246,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# визуализация результата"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## нарисовать решающее дерево"
    ]
   },
@@ -202,20 +272,6 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.tree import plot_tree"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## визуализировать результаты регресии"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
