--- a/lab/01-metric/01-metric-class.ipynb
+++ b/lab/01-metric/01-metric-class.ipynb
@@ -29,8 +29,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  загружаем данные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Dataset loading utilities    \n",
+    "https://scikit-learn.org/stable/datasets.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UC Irvine Machine Learning Repository    \n",
+    "https://archive.ics.uci.edu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,56 +61,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## данные"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "выбираем и загружаем датасет"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn import datasets\n",
-    "# help(datasets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# выбираем один из вариантов\n",
-    "\n",
-    "# from sklearn.datasets import load_iris\n",
-    "from sklearn.datasets import load_wine\n",
-    "\n",
-    "# https://archive.ics.uci.edu\n",
-    "# https://www.openml.org/search?type=data\n",
-    "# from sklearn.datasets import fetch_openml\n",
-    "# help(fetch_openml)"
+    "from sklearn import datasets "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## выделить тестовые данные"
+    "# изучение и визуализация данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Decomposition.     \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html\n",
+    "\n",
+    "Matplotlib: Quick start guide.      \n",
+    "https://matplotlib.org/stable/users/explain/quick_start.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# выделить тестовые данные"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,18 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## загружаем и обучаем модель классификатора"
+    "# обработка данных"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "# help(KNeighborsClassifier)"
+    "Scikit-Learn : Preprocessing data.    \n",
+    "https://scikit-learn.org/stable/modules/preprocessing.html"
    ]
   },
   {
@@ -118,6 +134,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import PolynomialFeatures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# загружаем и обучаем модель классификатора"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Nearest Neighbors.    \n",
+    "https://scikit-learn.org/stable/modules/neighbors.html     \n",
+    "https://scikit-learn.org/stable/modules/classes.html#module-sklearn.neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Model selection: choosing estimators and their parameters.    \n",
+    "https://scikit-learn.org/stable/tutorial/statistical_inference/model_selection.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# применяем методы поиска оптимальных гиперпараметров модели\n",
     "from sklearn.model_selection import GridSearchCV"
    ]
   },
@@ -125,14 +185,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## оценка результатов классификации"
+    "# оценка результатов классификации"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter"
+    "Scikit-Learn : Metrics and scoring: quantifying the quality of predictions   \n",
+    "https://scikit-learn.org/stable/modules/model_evaluation.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report # метрики качества"
    ]
   },
   {
@@ -142,10 +212,15 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix # количество ошибок\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "\n",
-    "from sklearn.metrics import classification_report # метрики качества\n",
-    "\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.metrics import roc_curve\n",
     "from sklearn.metrics import auc\n",
     "from sklearn.metrics import RocCurveDisplay"
