--- a/lab/05-boosting/01-boost-class.ipynb
+++ b/lab/05-boosting/01-boost-class.ipynb
@@ -29,8 +29,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  загружаем данные"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Dataset loading utilities    \n",
+    "https://scikit-learn.org/stable/datasets.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UC Irvine Machine Learning Repository    \n",
+    "https://archive.ics.uci.edu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,56 +61,57 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## данные"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "выбираем и загружаем датасет"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn import datasets\n",
-    "# help(datasets)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# выбираем один из вариантов\n",
-    "\n",
-    "# from sklearn.datasets import load_iris\n",
-    "from sklearn.datasets import load_wine\n",
-    "\n",
-    "# https://archive.ics.uci.edu\n",
-    "# https://www.openml.org/search?type=data\n",
-    "# from sklearn.datasets import fetch_openml\n",
-    "# help(fetch_openml)"
+    "from sklearn import datasets "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## выделить тестовые данные"
+    "# изучение и визуализация данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SciKit Learn: Decomposition.   \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib: Quick start guide.    \n",
+    "https://matplotlib.org/stable/users/explain/quick_start.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# выделить тестовые данные"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +122,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## загружаем и обучаем модель классификатора"
+    "# загружаем и обучаем модель классификатора"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "Scikit-Learn: Ensembles.   \n",
+    "https://scikit-learn.org/stable/modules/ensemble.html    \n",
+    "https://scikit-learn.org/stable/modules/classes.html#module-sklearn.ensemble"
    ]
   },
   {
@@ -117,6 +140,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Model selection: choosing estimators and their parameters.    \n",
+    "https://scikit-learn.org/stable/tutorial/statistical_inference/model_selection.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# применяем методы поиска оптимальных гиперпараметров модели\n",
     "from sklearn.model_selection import GridSearchCV"
    ]
   },
@@ -124,14 +166,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## оценка результатов классификации"
+    "# оценка результатов классификации"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://scikit-learn.org/stable/modules/model_evaluation.html#scoring-parameter"
+    "Scikit-Learn : Metrics and scoring: quantifying the quality of predictions   \n",
+    "https://scikit-learn.org/stable/modules/model_evaluation.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report # метрики качества"
    ]
   },
   {
@@ -141,10 +193,15 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix # количество ошибок\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "\n",
-    "from sklearn.metrics import classification_report # метрики качества\n",
-    "\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.metrics import roc_curve\n",
     "from sklearn.metrics import auc\n",
     "from sklearn.metrics import RocCurveDisplay"
@@ -167,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
