--- a/lab/06-mlp/01-mlp-class.ipynb
+++ b/lab/06-mlp/01-mlp-class.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__лабораторная работа N1:__  базовые методы машинного обучения, метрический подход\n",
+    "__лабораторная работа N6:__  нейронные сети прямого распространения\n",
     "\n",
     "__часть 1:__ решение задачи классификации"
    ]
@@ -80,10 +80,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SciKit Learn: Decomposition.     \n",
-    "https://scikit-learn.org/stable/modules/decomposition.html\n",
-    "\n",
-    "Matplotlib: Quick start guide.      \n",
+    "SciKit Learn: Decomposition.   \n",
+    "https://scikit-learn.org/stable/modules/decomposition.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matplotlib: Quick start guide.    \n",
     "https://matplotlib.org/stable/users/explain/quick_start.html"
    ]
   },
@@ -117,6 +122,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# обработка данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Learn : Preprocessing data.    \n",
+    "https://scikit-learn.org/stable/modules/preprocessing.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# загружаем и обучаем модель классификатора"
    ]
   },
@@ -124,18 +153,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scikit-Learn : Nearest Neighbors.    \n",
-    "https://scikit-learn.org/stable/modules/neighbors.html     \n",
-    "https://scikit-learn.org/stable/modules/classes.html#module-sklearn.neighbors"
+    "Scikit-Learn: Модели нейронных сетей (с учителем)   \n",
+    "https://scikit-learn.ru/1-17-neural-network-models-supervised/   \n",
+    "\n",
+    "\n",
+    "Scikit-Learn : Neural network models (supervised)   \n",
+    "https://scikit-learn.org/stable/modules/neural_networks_supervised.html\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.neural_network.MLPClassifier.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
