--- a/examples/17-mlp/01-mlp-numpy.ipynb
+++ b/examples/17-mlp/01-mlp-numpy.ipynb
@@ -930,7 +930,7 @@
     "        self._loss = loss\n",
     "        self._lr = lr # скорость обучения\n",
     "        \n",
-    "    def fit(self,x,t,n_epoch=128,batch_size=8):\n",
+    "    def fit(self,x,t,n_epoch=128):\n",
     "        loss_history = [ self._loss.estimate(x,t) ]\n",
     "        acc_history = [ accuracy_score(np.argmax(t,axis=-1),self._loss.model.predict(x)) ]\n",
     "        for _ in tqdm(range(n_epoch)):\n",
