--- a/lab/06-mlp/01-mlp-class.ipynb
+++ b/lab/06-mlp/01-mlp-class.ipynb
@@ -168,8 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
