--- a/examples/18-hopfield/01-hopfield.ipynb
+++ b/examples/18-hopfield/01-hopfield.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,12 +174,15 @@
     "    \n",
     "    def __init__(self):\n",
     "        self._weight = 0.\n",
+    "        self._bias = 0.\n",
     "        \n",
     "    def fit(self,x):\n",
     "        assert len(x)>1\n",
     "        batch_size, data_size = x.shape\n",
     "        self._weight = x.T.dot(x)\n",
-    "        # удаляем обратную связь нейрона на самого себя (обнуляем главную диагональ матрицы весов)\n",
+    "        self._bias = x.sum(axis=0)\n",
+    "        # обнуляем главную диагональ матрицы весов\n",
+    "        # т.е. удаляем обратную связь нейрона на самого себя \n",
     "        self._weight = self._weight *(np.ones([data_size,data_size])-np.eye(data_size,data_size))\n",
     "        return self\n",
     "    \n",
@@ -193,7 +196,7 @@
     "        return o        \n",
     "    \n",
     "    def _forward_step(self,x):\n",
-    "        return np.sign( x.dot(self._weight) )\n",
+    "        return np.sign( x.dot(self._weight) - self._bias )\n",
     "    "
    ]
   },
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +283,13 @@
     "plot_images(test,(7,2))\n",
     "plot_images(o_,(7,2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
