--- a/examples/18-hopfield/01-hopfield.ipynb
+++ b/examples/18-hopfield/01-hopfield.ipynb
@@ -22,16 +22,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import gzip\n",
-    "\n",
-    "with gzip.open('data/17x31.pkl.gz','rb') as f:\n",
-    "    ideal,test = pickle.load(f)"
+    "# !ls data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import gzip\n",
+    "\n",
+    "# with gzip.open('data/numb-30x30.pkl.gz','rb') as f: data = pickle.load(f)\n",
+    "with gzip.open('data/pix-17x31.pkl.gz','rb') as f: data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = data['train']['data']\n",
+    "data_test = data['test']['data']\n",
+    "#data_test = data['test']['noise_lo']['data']\n",
+    "\n",
+    "del data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +93,8 @@
     }
    ],
    "source": [
-    "plot_images(ideal,(3,2))\n",
-    "plot_images(test,(7,2))"
+    "plot_images(data_train,(len(data_train),2))\n",
+    "plot_images(data_test, (len(data_test), 2))"
    ]
   },
   {
@@ -84,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,22 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 527)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(7, 527)"
+       "((3, 527), (7, 527))"
       ]
      },
      "metadata": {},
@@ -116,22 +129,13 @@
     }
    ],
    "source": [
-    "(w,h),n = ideal[0].shape,len(ideal)\n",
-    "x_train = np.sign( 127.-np.stack(ideal).reshape(n,w*h) )\n",
+    "n,w,h = data_train.shape\n",
+    "x_train = np.sign( 254.-data_train ).reshape(n,w*h)\n",
     "\n",
-    "(w,h),n = test[0].shape,len(test)\n",
-    "x_test = np.sign( 127.-np.stack(test).reshape(n,w*h) )\n",
+    "n,w,h = data_test.shape\n",
+    "x_test = np.sign( 254.-data_test ).reshape(n,w*h)\n",
     "\n",
-    "display( x_train.shape, x_test.shape )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x_test"
+    "display(( x_train.shape, x_test.shape ))"
    ]
   },
   {
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,12 +192,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# загружаем память сети"
+    "# загружаем память модели"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,16 +229,6 @@
    "source": [
     "n,o = model.forward(x_test)\n",
     "display(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(w,h),n = test[0].shape,len(test)\n",
-    "o_ = ((1-o.reshape(n,w,h))*127).astype(np.uint8)"
    ]
   },
   {
@@ -274,9 +268,10 @@
     }
    ],
    "source": [
-    "plot_images(ideal,(3,2))\n",
-    "plot_images(test,(7,2))\n",
-    "plot_images(o_,(7,2))"
+    "plot_images(data_train,(len(data_train),2))\n",
+    "plot_images(data_test, (len(data_test), 2))\n",
+    "p = (1-o.reshape(data_test.shape))*127\n",
+    "plot_images(p,(len(data_test),2))"
    ]
   },
   {
