--- a/examples/18-hopfield/02-boltzman.ipynb
+++ b/examples/18-hopfield/02-boltzman.ipynb
@@ -13,6 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ассоциативная память на основе машины Больцмана.  \n",
+    "http://mechanoid.su/neural-net-boltzman.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##  загружаем данные "
    ]
   },
@@ -34,13 +42,24 @@
     "import pickle\n",
     "import gzip\n",
     "\n",
-    "with gzip.open('data/17x31.pkl.gz','rb') as f:\n",
-    "    ideal,test = pickle.load(f)"
+    "with gzip.open('data/pix-17x31.pkl.gz','rb') as f: data = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = data['train']['data']\n",
+    "data_test = data['test']['data']\n",
+    "\n",
+    "del data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +99,8 @@
     }
    ],
    "source": [
-    "plot_images(ideal,(3,2))\n",
-    "plot_images(test,(7,2))"
+    "plot_images(data_train,(len(data_train),2))\n",
+    "plot_images(data_test, (len(data_test), 2))"
    ]
   },
   {
@@ -93,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,22 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 527)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(7, 527)"
+       "((3, 527), (7, 527))"
       ]
      },
      "metadata": {},
@@ -126,29 +136,20 @@
     }
    ],
    "source": [
-    "(w,h),n = ideal[0].shape,len(ideal)\n",
-    "x_train = np.sign( 127.-np.stack(ideal).reshape(n,w*h) )\n",
+    "n,w,h = data_train.shape\n",
+    "x_train = np.sign( 254.-data_train ).reshape(n,w*h)\n",
     "\n",
-    "(w,h),n = test[0].shape,len(test)\n",
-    "x_test = np.sign( 127.-np.stack(test).reshape(n,w*h) )\n",
+    "n,w,h = data_test.shape\n",
+    "x_test = np.sign( 254.-data_test ).reshape(n,w*h)\n",
     "\n",
-    "display( x_train.shape, x_test.shape )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x_test"
+    "display(( x_train.shape, x_test.shape ))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# базовая модель"
+    "# модель"
    ]
   },
   {
@@ -198,13 +199,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# модель"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "энергия сети\n",
     "\n",
     "$E = - \\left( s\\cdot W \\right) * s - s*\\theta $   \n",
@@ -248,7 +242,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7281d3949d10>]"
+       "[<matplotlib.lines.Line2D at 0x7d2ce74b6490>]"
       ]
      },
      "execution_count": 9,
@@ -280,7 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7281d3a57b50>]"
+       "[<matplotlib.lines.Line2D at 0x7d2ce51e5910>]"
       ]
      },
      "execution_count": 10,
@@ -369,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# загружаем память сети"
+    "# загружаем память модели"
    ]
   },
   {
@@ -412,16 +406,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "(w,h),n = test[0].shape,len(test)\n",
-    "o_ = ((1-o.reshape(n,w,h))*127).astype(np.uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -455,9 +439,10 @@
     }
    ],
    "source": [
-    "plot_images(ideal,(3,2))\n",
-    "plot_images(test,(7,2))\n",
-    "plot_images(o_,(7,2))"
+    "plot_images(data_train,(len(data_train),2))\n",
+    "plot_images(data_test, (len(data_test), 2))\n",
+    "p = (1-o.reshape(data_test.shape))*127\n",
+    "plot_images(p,(len(data_test),2))"
    ]
   },
   {
