--- a/examples/18-hopfield/05-rbm_logistic_classification.ipynb
+++ b/examples/18-hopfield/05-rbm_logistic_classification.ipynb
@@ -29,6 +29,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy as np\n",
+    "# from sklearn.neural_network import BernoulliRBM\n",
+    "# x = np.array([[0, 0, 0], [0, 1, 1], [1, 0, 1], [1, 1, 1]])\n",
+    "# model = BernoulliRBM(n_components=2).fit(x)\n",
+    "# model.transform(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
