--- a/examples/19-hopfield/05-rbm.ipynb
+++ b/examples/19-hopfield/05-rbm.ipynb
@@ -232,7 +232,7 @@
     "        p = self.sigmoid( h.dot(self._weight.T) - self._bias_v )\n",
     "        return rng.binomial(1,p)\n",
     "    \n",
-    "    def forward_train(self,x,steps=2):\n",
+    "    def forward_train(self,x):\n",
     "        visible = [x]\n",
     "        hidden = []\n",
     "        h0 = self._sample_hidden(x)\n",
