--- a/examples/19-hopfield/03-hamming-text.ipynb
+++ b/examples/19-hopfield/03-hamming-text.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "['Харьков', 'Архангельск', 'Уфа', 'Калуга', 'Черкассы']"
+       "['Севастополь', 'Кишинев', 'Сыктывкар', 'Таллин', 'Киров']"
       ]
      },
      "metadata": {},
@@ -141,6 +141,7 @@
     "    def transform(self,text,max_word_len=0):\n",
     "        # заменяем буквы на коды\n",
     "        c = [ self._encode(w) for w in text ] \n",
+    "        \n",
     "        x = np.array( self._pad(c,max_word_len) )*2-1\n",
     "        n_samples, seq_len, code_len = x.shape\n",
     "        return x.reshape(n_samples,seq_len*code_len)\n",
@@ -180,6 +181,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  1, -1, ..., -1, -1, -1],\n",
+       "       [ 1,  1, -1, ..., -1, -1, -1],\n",
+       "       [ 1,  1, -1, ..., -1, -1, -1],\n",
+       "       ...,\n",
+       "       [ 1, -1,  1, ..., -1, -1, -1],\n",
+       "       [ 1,  1,  1, ..., -1, -1, -1],\n",
+       "       [ 1,  1,  1, ..., -1, -1, -1]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -197,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "['Лопецк', 'Панзу', 'Браст', 'Куунус', 'Днепрьпетрьвск']"
+       "['Лтвьв', 'Хаюурьвск', 'Члту', 'Сургут', 'Кьстрьму']"
       ]
      },
      "metadata": {},
@@ -294,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -463,7 +490,7 @@
        "'<table>\\n<tbody>\\n<tr><td>Акмьлу        </td><td>Актау         </td></tr>\\n<tr><td>Актуу         </td><td>Актау         </td></tr>\\n<tr><td>Алмуты        </td><td>Алматы        </td></tr>\\n<tr><td>Архунгельск   </td><td>Архангельск   </td></tr>\\n<tr><td>Аструхунь     </td><td>Астрахань     </td></tr>\\n<tr><td>Ашхуюуд       </td><td>Ашхабад       </td></tr>\\n<tr><td>Буку          </td><td>Баку          </td></tr>\\n<tr><td>Бурнуул       </td><td>Барнаул       </td></tr>\\n<tr><td>Билкек        </td><td>Бишкек        </td></tr>\\n<tr><td>Блугьвещенск  </td><td>Благовещенск  </td></tr>\\n<tr><td>Брутск        </td><td>Братск        </td></tr>\\n<tr><td>Браст         </td><td>Брест         </td></tr>\\n<tr><td>Брынск        </td><td>Брянск        </td></tr>\\n<tr><td>Вмльньс       </td><td>Вильнюс       </td></tr>\\n<tr><td>Витеюск       </td><td>Витебск       </td></tr>\\n<tr><td>Влудивьстьк   </td><td>Владивосток   </td></tr>\\n<tr><td>Влудикувкуз   </td><td>Владикавказ   </td></tr>\\n<tr><td>Вьлгьгруд     </td><td>Волгоград     </td></tr>\\n<tr><td>Вьлжский      </td><td>Волжский      </td></tr>\\n<tr><td>Вьльгду       </td><td>Вологда       </td></tr>\\n<tr><td>Вьрьнеж       </td><td>Воронеж       </td></tr>\\n<tr><td>Гьмель        </td><td>Гомель        </td></tr>\\n<tr><td>Грьднь        </td><td>Гомель        </td></tr>\\n<tr><td>Грьзный       </td><td>Грозный       </td></tr>\\n<tr><td>Гулистун      </td><td>Гулистан      </td></tr>\\n<tr><td>Дзерэинск     </td><td>Дзержинск     </td></tr>\\n<tr><td>Днепрьпетрьвск</td><td>Днепропетровск</td></tr>\\n<tr><td>Дьнецк        </td><td>Донецк        </td></tr>\\n<tr><td>Душунюе       </td><td>Душанбе       </td></tr>\\n<tr><td>Екутеринюург  </td><td>Екатеринбург  </td></tr>\\n<tr><td>Еревун        </td><td>Ереван        </td></tr>\\n<tr><td>Зупьрьжье     </td><td>Запорожье     </td></tr>\\n<tr><td>Ивуньвь       </td><td>Иваново       </td></tr>\\n<tr><td>Ижзеск        </td><td>Ижевск        </td></tr>\\n<tr><td>Ипкутск       </td><td>Иркутск       </td></tr>\\n<tr><td>Кузунь        </td><td>Казань        </td></tr>\\n<tr><td>Кулинингруд   </td><td>Калининград   </td></tr>\\n<tr><td>Кулугу        </td><td>Калуга        </td></tr>\\n<tr><td>Куругунду     </td><td>Караганда     </td></tr>\\n<tr><td>Куунус        </td><td>Каунас        </td></tr>\\n<tr><td>Кемерьвь      </td><td>Кемерово      </td></tr>\\n<tr><td>Кыив          </td><td>Тарту         </td></tr>\\n<tr><td>Кирьв         </td><td>Киров         </td></tr>\\n<tr><td>Кирьвьгруд    </td><td>Кировоград    </td></tr>\\n<tr><td>Кишгнев       </td><td>Кишинев       </td></tr>\\n<tr><td>Клуйпеду      </td><td>Клайпеда      </td></tr>\\n<tr><td>Кьстрьму      </td><td>Кострома      </td></tr>\\n<tr><td>Крусньдур     </td><td>Краснодар     </td></tr>\\n<tr><td>Крусньярск    </td><td>Красноярск    </td></tr>\\n<tr><td>Кцрск         </td><td>Курск         </td></tr>\\n<tr><td>Кустунуй      </td><td>Кустанай      </td></tr>\\n<tr><td>Лопецк        </td><td>Липецк        </td></tr>\\n<tr><td>Лугунск       </td><td>Луганск       </td></tr>\\n<tr><td>Лтвьв         </td><td>Львов         </td></tr>\\n<tr><td>Лююерцы       </td><td>Люберцы       </td></tr>\\n<tr><td>Мугнитьгьрск  </td><td>Магнитогорск  </td></tr>\\n<tr><td>Муриупьль     </td><td>Мариуполь     </td></tr>\\n<tr><td>Мухучкулу     </td><td>Махачкала     </td></tr>\\n<tr><td>Манск         </td><td>Минск         </td></tr>\\n<tr><td>Мьскву        </td><td>Москва        </td></tr>\\n<tr><td>Мурмунск      </td><td>Мурманск      </td></tr>\\n<tr><td>Нижневуртьвск </td><td>Нижневартовск </td></tr>\\n<tr><td>Нижнекумск    </td><td>Нижнекамск    </td></tr>\\n<tr><td>Ньвгьрьд      </td><td>Новгород      </td></tr>\\n<tr><td>Никьлуев      </td><td>Николаев      </td></tr>\\n<tr><td>Ньвькузнецк   </td><td>Новокузнецк   </td></tr>\\n<tr><td>Ньвьсиюирск   </td><td>Новосибирск   </td></tr>\\n<tr><td>Ньрильск      </td><td>Норильск      </td></tr>\\n<tr><td>Одассу        </td><td>Одесса        </td></tr>\\n<tr><td>Одинцьвь      </td><td>Одинцово      </td></tr>\\n<tr><td>Рмск          </td><td>Омск          </td></tr>\\n<tr><td>Оренюург      </td><td>Оренбург      </td></tr>\\n<tr><td>Пувльдур      </td><td>Павлодар      </td></tr>\\n<tr><td>Панзу         </td><td>Пенза         </td></tr>\\n<tr><td>Пармь         </td><td>Пермь         </td></tr>\\n<tr><td>Ригу          </td><td>Рига          </td></tr>\\n<tr><td>Рьстьв        </td><td>Ростов        </td></tr>\\n<tr><td>Рязунь        </td><td>Рязань        </td></tr>\\n<tr><td>Сумуру        </td><td>Самара        </td></tr>\\n<tr><td>Сумуркунд     </td><td>Самарканд     </td></tr>\\n<tr><td>Петерюург     </td><td>Петербург     </td></tr>\\n<tr><td>Сурунск       </td><td>Саранск       </td></tr>\\n<tr><td>Сурутьв       </td><td>Саратов       </td></tr>\\n<tr><td>Севустьпьль   </td><td>Севастополь   </td></tr>\\n<tr><td>Серпухьв      </td><td>Серпухов      </td></tr>\\n<tr><td>Симферьпьль   </td><td>Симферополь   </td></tr>\\n<tr><td>Смьленск      </td><td>Смоленск      </td></tr>\\n<tr><td>Сьчи          </td><td>Сочи          </td></tr>\\n<tr><td>Стуврьпьль    </td><td>Ставрополь    </td></tr>\\n<tr><td>Сургут        </td><td>Сургут        </td></tr>\\n<tr><td>Сыктывкур     </td><td>Сыктывкар     </td></tr>\\n<tr><td>Туллин        </td><td>Таллин        </td></tr>\\n<tr><td>Тумюьв        </td><td>Акмола        </td></tr>\\n<tr><td>Турту         </td><td>Тарту         </td></tr>\\n<tr><td>Тушкент       </td><td>Ташкент       </td></tr>\\n<tr><td>Тюилиси       </td><td>Тбилиси       </td></tr>\\n<tr><td>Тверь         </td><td>Тверь         </td></tr>\\n<tr><td>Тьльятти      </td><td>Тольятти      </td></tr>\\n<tr><td>Тьмск         </td><td>Томск         </td></tr>\\n<tr><td>Тклу          </td><td>Тула          </td></tr>\\n<tr><td>Тжмень        </td><td>Тюмень        </td></tr>\\n<tr><td>Улояньвск     </td><td>Ульяновск     </td></tr>\\n<tr><td>Уфу           </td><td>Уфа           </td></tr>\\n<tr><td>Хаюурьвск     </td><td>Хабаровск     </td></tr>\\n<tr><td>Херькьв       </td><td>Харьков       </td></tr>\\n<tr><td>Харсьн        </td><td>Херсон        </td></tr>\\n<tr><td>Чеюьксуры     </td><td>Чебоксары     </td></tr>\\n<tr><td>Челяюинск     </td><td>Челябинск     </td></tr>\\n<tr><td>Черкуссы      </td><td>Черкассы      </td></tr>\\n<tr><td>Элисту        </td><td>Элиста        </td></tr>\\n<tr><td>Члту          </td><td>Ялта          </td></tr>\\n<tr><td>Ярьслувль     </td><td>Ярославль     </td></tr>\\n</tbody>\\n</table>'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
